# win_portable

./: .gitignore  README.md  recompose.bat
A's Video Converter/: A's Video Converter.url  ReadMe.txt
A's Video Converter/Language/: cn.xml  de.xml  el.xml  en.xml  it.xml  ja.xml  ru.xml  tr.xml
Accessoires/: write.wpc
AdwCleaner/: AdwCleaner.url
CapsUnlock/: ReadMe.txt
Cleaner/AppBuster/: AppBuster.url
Cleaner/CCleaner/: CCleaner.url
Cleaner/CleanTemp/: CleanTemp.bat
Cleaner/LastActivityView/: LastActivityView.cfg  LastActivityView.url
Cleaner/PrivaZer/: PrivaZer.url
Cleaner/Shellbag Analyzer & Cleaner/: shellbag_analyzer_cleaner.ini
Cleaner/WinaeroTweaker/: WinaeroTweaker_AdvancedTweaks.ini
Coding/Spyder/: Spyder.bat  Spyder.url  Spyder_cmd.bat
Coding/ctags/: ctags-win32.url
Coding/git/: git.url
Coding/lua/: lua.url
Coding/msys64/: MSYS2.url  components.xml
Coding/nvm/: nvm_cmd.bat  settings.txt  settings_sequence.txt
Coding/python/: python.url
Coding/qemu/: qemu.url
Coding/vlang/: vlang.url
CrossHair/: CrossHair.url  license.rtf
Dia/sheets/: Electric.sheet  GRAFCET.sheet  IsometricMap.sheet  KAOS.sheet  Lights.sheet  SDL.sheet  UML.sheet  ciscohub.sheet  ciscotelephony.sheet  network.sheet  sybase.sheet
DirectShutdown/: DLAO.url  DirectShutdown.url  license.txt
Document/Doxygen/: Doxygen.url
Document/Graphviz/: Graphviz.url
Document/LibreOffice/: LibreOffice.url
Document/Msc-generator/: Demo.signalling  Msc-generator.url  (+3 more)
Document/mscgen-0.20/: Makefile.am  Makefile.in  TODO  aclocal.m4  configure.ac  mscgen.lang  mscgen.url
Document/mscgen-0.20/examples/: Makefile.am  Makefile.in  boxes_example.mscin  client_server.mscin  msg_types.mscin  simple_prog_desc.mscin
Document/mscgen-0.20/share/man/man1/: mscgen.1
Document/mscgen-0.20/src/: cmdparse.c  safe.h  utf8.c  utf8.h
Document/mscgen-0.20/test/: Makefile.am  Makefile.in  renderercheck.sh  testinput0.msc  testinput11.msc  testinput13.msc  testinput14.msc  testinput15.msc  testinput16.msc  testinput17.msc  testinput18.msc  testinput2.msc  testinput20.msc  testinput3.msc  testinput6.msc  testinput7.msc
DragLock/: DragLock.ini
Elm/: Elm.url
Erlang/: Erlang.url
FileZilla/: NEWS
Firefox/: FirefoxPortable.url
ImageMagick/: ImageMagick.url  NOTICE.txt
IrfanView/: i_changes.txt  i_options.txt  i_plugins.txt  i_view32.chm  i_view64.ini
JoyToKey/: Changes.txt  JoyToKey.url  Readme.txt
K-Lite Codec Pack/: K-Lite Codec Pack Mega.url
Keyboard Status/: Keyboard Status.url
LICEcap/: LICEcap.url
Msc-generator/: Msc-generator.url  Release notes.rtf  original_designlib.graph  original_designlib.signalling
MyDefrag/: Forum.url  Manual.chm
Notepad++/: LICENSE  config.xml  contextMenu.xml  functionList.xml  langs.model.xml  session.xml  shortcuts.xml  shortcuts.xml.bak  stylers.model.xml  stylers.xml  userDefineLang.xml
Notepad2-mod/: Notepad2.ini
NumLocker/: NumLocker.url  Readme.rtf
OBS-Studio/: OBS-Studio.url
PDFtk/: pdftk-server.url
PellesC/: PellesC.url
Picat/: Picat.url
PrivaZer/: PrivaZer.ini
PureText/: PureText.url
RogueKiller/: RogueKiller.url
Shellbag Analyzer & Cleaner/: Shellbag Analyzer & Cleaner.url
Sourcetrail/: Sourcetrail.url
Spyder/: Spyder.bat  Spyder_cmd.bat  Spyder_pip_reinstall.bat
Startup/: open_startup_folder.bat
Subtitle Edit/: Changelog.txt  Settings.xml
SysExporter/: SysExporter.url  sysexp.cfg
TTYEmulator/: TTYEmulPE.xml
TextAnalysisTool.NET/: LICENSE  TextAnalysisTool.NET.url
TortoiseGit/: TortoiseGit.url
Total Commander/: DEFAULT.BAR  HISTORY.TXT  KEYBOARD.TXT  TCUNIN64.WUL  TCUNINST.WUL  TOTALCMD.CHM  TOTALCMD.INC  TOTALCMD64.EXE.MANIFEST  WCMICONS.INC  WINCMD.INI  default.br2  descript.ion  tcmd_colors.txt  vertical.br2
TreeSheets/: TreeSheets.url  readme.html
UCheck/: UCheck.url
USBDeview/: USBDeview.chm  USBDeview.url  readme.txt
UsbTreeView/: UsbTreeView.ini  UsbTreeView.txt
WinMerge/: WinMerge.url
XpdfReader/: README
curl/: curl.url
flux/: flux.url
inkscape/: Inkscape.url  NEWS.md  README.md  Run Inkscape and create debug trace.bat  Run Inkscape with GTK Inspector.bat
lite/: lite
miktex/: miktex.url
mingw64/: MinGW-w64 - for 32 and 64 bit Windows.url
mscgen-0.20/: config.h.in  configure
mscgen-0.20/man/: Makefile.am  Makefile.in  mscgen.1in
msys64/: InstallationLog.txt  maintenancetool.ini
my_basic/: my_basic.url
nvm/: nvm_cmd.bat  settings_sequence.txt
openscad/: openscad.com
paint.net/: PaintDotNet.Strings.3.DE.resources  PaintDotNet.Strings.3.ES.resources  PaintDotNet.Strings.3.FR.resources  PaintDotNet.Strings.3.JA.resources  PaintDotNet.Strings.3.KO.resources  PaintDotNet.Strings.3.PT-BR.resources  PaintDotNet.Strings.3.RU.resources  PaintDotNet.Strings.3.ZH-CN.resources  PaintDotNet.Strings.3.be.resources  PaintDotNet.Strings.3.cs.resources  PaintDotNet.Strings.3.da.resources  PaintDotNet.Strings.3.el.resources  PaintDotNet.Strings.3.fa.resources  PaintDotNet.Strings.3.fi.resources  PaintDotNet.Strings.3.he.resources  PaintDotNet.Strings.3.hi.resources  PaintDotNet.Strings.3.hu.resources  PaintDotNet.Strings.3.it.resources  PaintDotNet.Strings.3.lt.resources  PaintDotNet.Strings.3.nl.resources  PaintDotNet.Strings.3.no.resources  PaintDotNet.Strings.3.pl.resources  PaintDotNet.Strings.3.pt-PT.resources  PaintDotNet.Strings.3.resources  PaintDotNet.Strings.3.sk.resources  PaintDotNet.Strings.3.sl.resources  PaintDotNet.Strings.3.sv.resources  PaintDotNet.Strings.3.tr.resources  PaintDotNet.Strings.3.uk.resources  PaintDotNet.Strings.3.zh-TW.resources
perl/: DISTRIBUTIONS.txt  README.txt  Strawberry Perl.url
texmaker/: CHANGELOG.txt  texmaker.bat  texmaker.exp  texmaker.ini
tinycc/: tinycc_win32.url
v/: make.bat
wavedrom_test/: mywave.json5  wavedrom_test.bat
wget/: wget.url  wget_help.txt
(+14536 files in other folders)
