#
# $Id: Makefile.am 187 2011-03-03 21:48:02Z Michael.McTernan@gmail.com $
#

TESTS_ENVIRONMENT= top_builddir=$(top_builddir)
TESTS = renderercheck.sh

EXTRA_DIST = renderercheck.sh \
testinput0.msc   testinput11.msc  testinput4.msc  testinput7.msc \
testinput1.msc   testinput2.msc   testinput5.msc  testinput8.msc \
testinput10.msc  testinput3.msc   testinput6.msc  testinput9.msc \
testinput12.msc  testinput13.msc  testinput14.msc testinput15.msc \
testinput16.msc  testinput17.msc  testinput18.msc testinput19.msc \
testinput20.msc

CLEANFILES = *.png *.svg *.eps *.ismap

# END OF FILE
